fixing nav and container spacing

--- a/src/Pages/Test/Test.scss
+++ b/src/Pages/Test/Test.scss
@@ -15,7 +15,6 @@ body {
 
   a {
     display: inline-block;
-    height: 1.2rem;
   }
 }
 
